# lambda-calculus-dsl-python

./: pyproject.toml
src/lambda_calculus_dsl/: __init__.py  viewer.py
src/lambda_calculus_dsl/base/: __init__.py  base.py  r.py
src/lambda_calculus_dsl/higher_order/: __init__.py  higher_order.py  r.py  rv.py
src/lambda_calculus_dsl/symbolic/: __init__.py  rv.py  symbolic.py
src/lambda_calculus_dsl/transforms/: constant_propagation.py  double_negation_elimination.py  push_negation.py  rr.py  transform.py
test/: test_main.py  test_transform.py
