[tool.poetry]
name = "lambda-calculus-dsl"
version = "0.1.0"
description = ""
authors = ["Felix Thaler <thaler@cscs.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^24.3.0"
mypy = "^0.910"
flake8 = "^4.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src/**/*.py", "test/**/*.py"]
