[project]
name = "lambda-calculus-dsl"
version = "0.1.0"
description = ""
authors = [{ name = "Felix Thaler", email = "thaler@cscs.ch" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["toolz"]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "mypy",
    "flake8",
    "isort",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.mypy]
files = ["src/**/*.py", "test/**/*.py"]
